; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_acpi_configfs.c_acpi_table_revision_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_acpi_configfs.c_acpi_table_revision_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_item = type { i32 }
%struct.acpi_table_header = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_item*, i8*)* @acpi_table_revision_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_table_revision_show(%struct.config_item* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.config_item*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.acpi_table_header*, align 8
  store %struct.config_item* %0, %struct.config_item** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.config_item*, %struct.config_item** %4, align 8
  %8 = call %struct.acpi_table_header* @get_header(%struct.config_item* %7)
  store %struct.acpi_table_header* %8, %struct.acpi_table_header** %6, align 8
  %9 = load %struct.acpi_table_header*, %struct.acpi_table_header** %6, align 8
  %10 = icmp ne %struct.acpi_table_header* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load i8*, i8** %5, align 8
  %16 = load %struct.acpi_table_header*, %struct.acpi_table_header** %6, align 8
  %17 = getelementptr inbounds %struct.acpi_table_header, %struct.acpi_table_header* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %14, %11
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local %struct.acpi_table_header* @get_header(%struct.config_item*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
